tests/expectations/compiler/dynamic_dispatch/dynamic_contains_unsuffixed_key_fail.out
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:11:62
     |
  11 |     let _: bool = _dynamic_contains(prog, net, mapping_name, 1);
     |                                                              ^
     |
     = Consider using explicit type annotations.
